Kubernetes_CKA_Alok/deployment_strategy/basic_app_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
          - containerPort: 80
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: www
          configMap:
            name: web-v1
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #  annotations:
    #    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: base.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80


#curl --resolve base.com:80:<External IP> http://base.com:80
#while true; do curl --resolve base.com:80:<External IP> http://base.com:80 ; done

#curl --resolve base.com:80:192.168.10.50 http://base.com:80
#while true; do curl --resolve base.com:80:192.168.10.50 http://base.com:80 ; done
